# src/models/iAssinatura.ts
@@ -1,0 +1,8 @@
+
+export interface iAssinatura {
+    assinaturaid?: number,
+    clienteid: number
+    planoid: number,
+    assinaturaativa: boolean,
+    datarenovacao: string
+}
